Fix horizontal scroll (had a small margin on the right by accident); make BERNIE SANDERS on two separate lines for mobile; other small tweaks

--- a/public/main.css
+++ b/public/main.css
@@ -142,7 +142,6 @@ header .headingcontainer {
   position: absolute;
   left: 30px;
   top: 42px;
-  width: 100%;
 }
 
 /* common for heading and subheading */
